--- a/src/main/resources/templates/user_index.html
+++ b/src/main/resources/templates/user_index.html
@@ -41,7 +41,7 @@
 
     <div class="left-bar">
         <div class="method_title">全部功能</div>
-        <div><a href="" class="method_name">我的订单</a></div>
+        <div><a href="" th:href="@{/get_order_list_by_b_s_id}" class="method_name">我的订单</a></div>
         <div><a href="" th:href="@{/get_address_list}" class="method_name">我的地址</a></div>
         <div><a href="" class="method_name">我的小店</a></div>
         <div><a href="" class="method_name">个人中心</a></div>
